--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,10 +89,10 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./laravel/:/var/www
+      - ./laravel/:/var/www/
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/nginx/certs:/etc/nginx/certs
-      - /tmp/letsencrypt/www:/tmp/letsencrypt/www
+      - ./docker/nginx/certs/:/etc/nginx/certs/
+      - /tmp/letsencrypt/www/:/tmp/letsencrypt/www/
     networks:
       - app
 
