--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,45 +9,48 @@ services:
     depends_on:
       - db
       - redis
+      - rabbitmq
     command: ["php-fpm"]
+    ports:
+      - '9002:9000'
     networks:
       - app
 
-  # horizon:
-  #   container_name: horizon
-  #   build:
-  #     context: laravel
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - ./laravel/:/var/www
-  #   depends_on:
-  #     - db
-  #     - redis
-  #     - rabbitmq
-  #   command: ["php","artisan","horizon"]
-  #   profiles: 
-  #     - workers
-  #   restart: always
-  #   networks:
-  #     - app
+  horizon:
+    container_name: horizon
+    build:
+      context: laravel
+      dockerfile: Dockerfile
+    volumes:
+      - ./laravel/:/var/www
+    depends_on:
+      - db
+      - redis
+      - rabbitmq
+    command: ["php","artisan","horizon"]
+    profiles: 
+      - workers
+    restart: always
+    networks:
+      - app
 
-  # schedule:
-  #   container_name: schedule
-  #   build:
-  #     context: laravel
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - ./laravel/:/var/www
-  #   depends_on:
-  #     - db
-  #     - redis
-  #     - rabbitmq
-  #   command: ["php", "artisan", "schedule:run"]
-  #   profiles: 
-  #     - workers
-  #   restart: always
-  #   networks:
-  #     - app
+  schedule:
+    container_name: schedule
+    build:
+      context: laravel
+      dockerfile: Dockerfile
+    volumes:
+      - ./laravel/:/var/www
+    depends_on:
+      - db
+      - redis
+      - rabbitmq
+    command: ["php", "artisan", "schedule:run"]
+    profiles: 
+      - workers
+    restart: always
+    networks:
+      - app
   
 
   # db:
@@ -82,35 +85,48 @@ services:
   nginx:
     container_name: nginx
     image: nginx:stable-alpine
-    labels:
-      proxy_nginx: "ssl"
     restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./laravel/:/var/www/
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/nginx/certs/:/etc/nginx/certs/
-      - /tmp/letsencrypt/www/:/tmp/letsencrypt/www/
+      - ./laravel/:/var/www
+      - ./docker/nginx/conf.d:/etc/nginx/conf.d
+      - ./docker/nginx/etc-letsencrypt:/etc/letsencrypt
     networks:
       - app
 
-  # rabbitmq:
-  #   image: rabbitmq:3-management
-  #   container_name: rabbitmq
-  #   hostname: ${RABBITMQ_HOST}
-  #   environment:
-  #     RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
-  #     RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
-  #   ports:
-  #       - ${RABBITMQ_ADMIN_PORT}:${RABBITMQ_ADMIN_PORT}
-  #       - ${RABBITMQ_PORT}:${RABBITMQ_PORT}
-  #   restart: always
-  #   volumes:
-  #     - ./docker/rabbitmq:/var/lib/rabbitmq
-  #   networks:
-  #     - app
+  certbot:
+    image: certbot/certbot
+    depends_on:
+      - nginx
+    container_name: certbot
+    volumes:
+      - ./docker/nginx/etc-letsencrypt:/etc/letsencrypt
+      - ./laravel/:/var/www
+    command: certonly --webroot --webroot-path=/var/www/public --email ${ADMIN_EMAIL} --agree-tos --no-eff-email -d ${DOMAIN} -v
+    profiles: 
+      - certbot
+    networks:
+      - app
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    hostname: ${RABBITMQ_HOST}
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    ports:
+        - ${RABBITMQ_ADMIN_PORT}:${RABBITMQ_ADMIN_PORT}
+        - ${RABBITMQ_PORT}:${RABBITMQ_PORT}
+    restart: always
+    volumes:
+      - ./docker/rabbitmq:/var/lib/rabbitmq
+      - ./docker/rabbitinit/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+      - ./docker/rabbitinit/definitions.json:/etc/rabbitmq/definitions.json:ro
+    networks:
+      - app
 
   redis:
       image: redis:alpine
