--- a/docker/nginx/conf.d/testpp.ru.conf
+++ b/docker/nginx/conf.d/testpp.ru.conf
@@ -1,25 +1,25 @@
- server {
-     listen 80;
-     listen [::]:80;
+#  server {
+#      listen 80;
+#      listen [::]:80;
  
-     server_name www.testpp.ru testpp.ru;
+#      server_name www.testpp.ru testpp.ru;
   
-     location ~ /.well-known/acme-challenge {
-         allow all;
-         root /var/www;
-     }
+#      location ~ /.well-known/acme-challenge {
+#          allow all;
+#          root /var/www;
+#      }
   
-     location / {
-         rewrite ^ https://$host$request_uri? permanent;
-     }
-   }
+#      location / {
+#          rewrite ^ https://$host$request_uri? permanent;
+#      }
+#    }
   
   server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    # listen 443 ssl;
+    # listen [::]:443 ssl;
 
-    # listen 80;
-    # listen [::]:80;
+    listen 80;
+    listen [::]:80;
   
     server_name www.testpp.ru testpp.ru;
   
