--- a/docker/nginx/conf.d/testpp.ru.conf
+++ b/docker/nginx/conf.d/testpp.ru.conf
@@ -6,7 +6,7 @@
   
 #      location ~ /.well-known/acme-challenge {
 #          allow all;
-#          root /var/www;
+#          root /var/www/public;
 #      }
   
 #      location / {
@@ -82,7 +82,7 @@
     # Well known
     location ~ /.well-known/acme-challenge {
         allow all;
-        root /var/www;
+        root /var/www/public;
     }
 
   }
