--- a/docker/nginx/conf.d/testpp.ru.conf
+++ b/docker/nginx/conf.d/testpp.ru.conf
@@ -1,25 +1,25 @@
-#  server {
-#      listen 80;
-#      listen [::]:80;
+ server {
+     listen 80;
+     listen [::]:80;
  
-#      server_name www.testpp.ru testpp.ru;
+     server_name www.testpp.ru testpp.ru;
   
-#      location ~ /.well-known/acme-challenge {
-#          allow all;
-#          root /var/www/public;
-#      }
+     location ~ /.well-known/acme-challenge {
+         allow all;
+         root /var/www/public;
+     }
   
-#      location / {
-#          rewrite ^ https://$host$request_uri? permanent;
-#      }
-#    }
+     location / {
+         rewrite ^ https://$host$request_uri? permanent;
+     }
+   }
   
   server {
-    # listen 443 ssl;
-    # listen [::]:443 ssl;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
-    listen 80;
-    listen [::]:80;
+    # listen 80;
+    # listen [::]:80;
   
     server_name www.testpp.ru testpp.ru;
   
@@ -34,8 +34,8 @@
   
     charset utf-8;
   
-    # ssl_certificate /etc/letsencrypt/live/default.ru/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/default.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/testpp.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/testpp.ru/privkey.pem;
   
     location = /favicon.ico {
       access_log off; log_not_found off;
