--- a/docker/nginx/conf.d/testpp.ru.conf
+++ b/docker/nginx/conf.d/testpp.ru.conf
@@ -1,91 +1,102 @@
- server {
-     listen 80;
-     listen [::]:80;
- 
-     server_name www.testpp.ru testpp.ru;
-  
-     location ~ /.well-known/acme-challenge {
-         allow all;
-         root /var/www/public;
-     }
-  
-     location / {
-         rewrite ^ https://$host$request_uri? permanent;
-     }
-   }
-  
-  server {
+server {
+  listen 80;
+  listen [::]:80;
 
-    client_max_body_size 48M;
+  server_name www.testpp.ru testpp.ru;
 
-    listen 443 ssl;
-    listen [::]:443 ssl;
-
-    # listen 80;
-    # listen [::]:80;
-  
-    server_name www.testpp.ru testpp.ru;
-  
-    index index.php index.html;
-  
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-  
+  location ~ /.well-known/acme-challenge {
+    allow all;
     root /var/www/public;
-  
-    server_tokens off;
-  
-    charset utf-8;
-  
-    ssl_certificate /etc/letsencrypt/live/testpp.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/testpp.ru/privkey.pem;
-  
-    location = /favicon.ico {
-      access_log off; log_not_found off;
-    }
-    location = /robots.txt {
-      access_log off; log_not_found off;
-    }
-  
-    # Laravel API routes
-    location ~ /(api)(/.*|$) {
-      try_files $uri $uri/ /index.php?$query_string;
-      gzip_static on;
-    }
-  
-    # Laravel static files
-    location ~ /(admin|logging|vendor|storage)(/.*|$) {
-      try_files $uri $uri/ /index.php?$query_string;
-      gzip_static on;
-    }
-  
-    # Laravel Filament routes
-    location ~ /(css/filament|js/filament|livewire)(/.*|$) {
-      try_files $uri $uri/ /index.php?$query_string;
-      gzip_static on;
-    }
-  
-    # Laravel PHP routes
-    location ~ \.php$ {
-      try_files $uri =404;
-      fastcgi_split_path_info ^(.+\.php)(/.+)$;
-      fastcgi_pass laravel:9000;
-      fastcgi_index index.php;
-      include fastcgi_params;
-      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-      fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-  
-    # Other routes routes
-    location / {
-      try_files $uri $uri/ /index.php?$query_string;
-      gzip_static on;
-    }
-
-    # Well known
-    location ~ /.well-known/acme-challenge {
-        allow all;
-        root /var/www/public;
-    }
-
   }
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  client_max_body_size 48M;
+
+  listen 443 ssl;
+  listen [::]:443 ssl;
+
+  server_name www.testpp.ru testpp.ru;
+
+  index index.php index.html;
+
+  error_log /var/log/nginx/error.log;
+  access_log /var/log/nginx/access.log;
+
+  root /var/www/public;
+
+  server_tokens off;
+
+  charset utf-8;
+
+  ssl_certificate /etc/letsencrypt/live/testpp.ru/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/testpp.ru/privkey.pem;
+
+  limit_req zone=one burst=5 nodelay;
+  limit_conn zone=two 10;
+
+  if ($http_user_agent ~* "bot|crawler|spider|slurp|archive") {
+    access_log off;
+    log_not_found off;
+    return 403;
+  }
+
+  location = /favicon.ico {
+    access_log off;
+    log_not_found off;
+  }
+  location = /robots.txt {
+    access_log off;
+    log_not_found off;
+  }
+
+  location ~ /(api)(/.*|$) {
+    try_files $uri $uri/ /index.php?$query_string;
+    gzip_static on;
+    limit_req zone=api burst=10 nodelay;
+  }
+
+  location ~ /(admin|logging|vendor|storage)(/.*|$) {
+    try_files $uri $uri/ /index.php?$query_string;
+    gzip_static on;
+  }
+
+  location ~ /(css/filament|js/filament|livewire)(/.*|$) {
+    try_files $uri $uri/ /index.php?$query_string;
+    gzip_static on;
+  }
+
+  location ~ \.php$ {
+    try_files $uri =404;
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    fastcgi_pass laravel:9000;
+    fastcgi_index index.php;
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
+  }
+
+  location / {
+    try_files $uri $uri/ /index.php?$query_string;
+    gzip_static on;
+  }
+
+  location ~ /.well-known/acme-challenge {
+    allow all;
+    root /var/www/public;
+  }
+
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-XSS-Protection "1; mode=block";
+  add_header X-Content-Type-Options "nosniff";
+  add_header Referrer-Policy "strict-origin-when-cross-origin";
+  add_header Feature-Policy "microphone 'none'; camera 'none'; geolocation 'none';";
+  add_header Permissions-Policy "microphone=(), camera=(), geolocation=(), payment=(), clipboard-read=(), clipboard-write=(), interest-cohort=()";
+
+  #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+  #add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; object-src 'none'; frame-ancestors 'none';";
+}
