--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.335",
         "elasticsearch/elasticsearch": "dev-main",
         "filament/filament": "^3.2",
         "filament/forms": "^3.2",
